samples/_failures_safe/1761268821_0cc827_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6402a48.c: In function ‘main’:
./samples/SAFE/__tmp_e6402a48.c:143:9: error: expected expression at end of input
  143 |         for (int i =
      |         ^~~
./samples/SAFE/__tmp_e6402a48.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6402a48.c:143:9: error: expected declaration or statement at end of input
